9.4. Adicionando as propriedades com constraints violadas na retorno
9.4. Estendendo o Problem Details para adicionar as propriedades com
constraints violadas